# agenttrace

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements-before-upgrade.txt
.langgraph_api/: .langgraph_ops.pckl
data/fixtures/: fully_supported_repo.json
docs/: analysis_evidence_policy.md  analysis_pipeline_improvements.md  analysis_quality_review_playbook.md  analysis_run_artifact_contract.md  development.md  logging.md
docs/superpowers/plans/: 2026-06-21-separate-analysis-summary-models.md  2026-06-23-finalize-analysis-perf.md  (+2 more)
scripts/: smoke_context7.py
src/agenttrace/: __init__.py  config.py  graph.py  logging_config.py  models.py  routing.py  state.py
tests/: conftest.py  test_analysis_artifacts.py  test_analysis_input_providers.py  test_analysis_model.py  test_analysis_quality_docs.py  test_analysis_repo_map.py  test_analysis_schemas_repo_map.py  test_analysis_state.py  test_analysis_v2_graph.py  test_analysis_v2_nodes.py  test_analysis_v2_schemas.py  test_api_analysis.py  test_area_explorer.py  test_bm25.py  test_config_parser.py  test_content_index_store.py  test_embeddings.py  test_extract_mentions.py  test_file_catalog.py  test_gitingest_parser.py  test_harness_analysis.py  test_nodes.py  test_package_structure.py  test_react_tools.py  test_repo_map_renderer.py  test_report_renderer.py  test_source_inventory.py  test_spec_sync.py  test_summary_service.py  test_symbol_extractor.py  test_worker.py
tests/fixtures/: gitingest_superpowers.txt
(+66 files in other folders)
