[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace"
version = "0.1.0"
description = "Evidence-first AgentHub analysis workflow prototype using LangGraph"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
agenthub-analyze = "agenttrace.agents.analysis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["agenttrace*"]
exclude = ["data*", "tests*", "docs*"]

[tool.setuptools.package-data]
"agenttrace.agents.analysis" = ["prompts/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
